--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
-Source: python-graphite
+Source: python-pygraphite
 Section: main
 Priority: optional
 Maintainer: Viacheslav Chimishuk <vchimishuk@yandex.ru>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.4
-Homepage: https://github.com/vchimishuk/python-graphite
+Homepage: https://github.com/vchimishuk/python-pygraphite
 
-Package: python-graphite
+Package: python-pygraphite
 Architecture: all
 Depends: python3
 Description: Python3 library to send Graphite metrics
