--- a/debian/rules
+++ b/debian/rules
@@ -7,5 +7,5 @@ export DH_VERBOSE=1
 	dh $@
 
 override_dh_auto_install:
-	install -g 0 -o 0 -d debian/python-graphite/usr/lib/python3/dist-packages
-	cp -r graphite debian/python-graphite/usr/lib/python3/dist-packages
+	install -g 0 -o 0 -d debian/python-pygraphite/usr/lib/python3/dist-packages
+	cp -r pygraphite debian/python-pygraphite/usr/lib/python3/dist-packages
